--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,8 @@
 body{
-    text-align: center;
-    width: 480px;
-    height: 767px;
-    margin: 0% auto;
+    /* text-align: center; */
+    /* width: 480px;
+    height: 767px; 
+    margin: 0% auto; */
+    display: flex;
+    flex-direction: column;
 }
