--- a/styles/module.css
+++ b/styles/module.css
@@ -1,26 +1,38 @@
+/* Mobile 480px-767px */
 header div{
 background-color: rgb(115, 115, 236);
-width: 480px;
+/* width: 100%; */
 height: 75px;
-line-height: 75px;
+/* line-height: 75px; */
+display: flex;
+justify-content: center;
+align-items: center;
+ 
 }
+
 main aside{
     background-color: rgb(219, 43, 78);
-    width: 480px;
+    /* width: 100%; */
     height: 150px;
     line-height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .cd{
-    width: 480px;
+    /* width: 100%; */
     height: 125px;
-    line-height: 125px;
+    /* line-height: 125px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.efgh{
+/* .efgh{
     width: 240px;
     height: 250px;
     line-height: 250px;
     float: left;
-}
+} */
 
 #c{
     background-color: palevioletred;
@@ -42,19 +54,42 @@ main aside{
 }
 footer div{
     background-color: rgb(129, 216, 112);
-    width: 480px;
+    /* width: 100%; */
     height: 80px;
-    line-height: 80px;
-    clear: both;
+    /* line-height: 80px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+#section{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+#section div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 250px;
+}
+/* Tablet 768px-960px */
 @media (min-width:768px) and (max-width:960px){
     body, html{
-        width: 960px;
-        height: 700px;
+        /* width: 960px;
+        height: 700px; */
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
+    /* main{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    } */
     header div{
-       width : 960px;
+       width : 100%;
        height: 100px;
        background-color: rgb(74, 74, 255);
        line-height: 100px;
@@ -73,11 +108,11 @@ footer div{
         margin-top: -600px;
         line-height: 200px;
     }
-    .efgh{
+    /* .efgh{
         width: 190px;
         height: 250px;
         line-height: 250px;
-    }
+    } */
     main aside{
         width: 200px;
         height: 600px;
@@ -106,5 +141,92 @@ footer div{
     }
     #section{
         margin-left: 200px;
+        display: flex;
+        flex-direction: row;
+        width: 99%;
+    }
+    #section div{
+        width: 20%;
+    }
+}
+
+/* Desktop 961px-1024px */
+@media (min-width:961px) and (max-width:1024px){
+    body{
+        /* width: 1024px; */
+        /* height: 960px; */
+        display: flex;
+        /* flex-direction: column; */
+    }
+    header div{
+        /* width : 1024px; */
+       height: 100px; 
+       background-color: rgb(181, 181, 212);
+       /* line-height: 100px; */
+       flex-direction: row;
+    }
+    footer div{
+        /* /* width : 100%; */
+        height: 150px; 
+        background-color: rgb(182, 226, 173);
+        margin-left: 200px;
+        /* line-height: 100px; */
+        flex-direction: row;
+    }
+    .cd{
+        /* width: 380px; */
+        height: 200px;
+        margin-left: 200px;
+        margin-top: -600px;
+        line-height: 200px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .efgh{
+        width: 190px;
+        height: 250px;
+        line-height: 250px;
+    }
+    main aside{
+        width: 200px;
+        height: 600px;
+        background-color: rgb(209, 154, 165);
+        line-height: 600px;
+        flex-direction: column;
+    }
+    #c{
+        background-color: rgb(194, 121, 145);
+    }
+    #d{
+        background-color: rgb(131, 106, 129);
+        margin-left: 580px;
+        margin-top: -200px;
+        flex-grow: 1;
+        order: 2;
+    }
+    #e{
+        background-color: rgb(101, 86, 114);
+    }
+    #f{
+        background-color: rgb(91, 142, 155);
+    }
+    #g{
+        background-color: rgb(149, 150, 102);
+    }
+    #h{
+        background-color: rgb(165, 123, 83);
+    }
+    #section{
+        margin-left: 200px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 99.2%;
+    }
+    #section div{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 20%;
     }
 }
